--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,7 @@
-# Typeorm - Produção
-TYPEORM_MIGRATION=./dist/shared/infra/typeorm/migrations/*.js
-TYPEORM_ENTITIES=./dist/modules/**/infra/typeorm/entities/*.js
-TYPEORM_CLI=./dist/shared/infra/typeorm/migrations
+# Typeorm - DEV
+TYPEORM_MIGRATION=./dist/database/migrations/*.ts
+TYPEORM_MIGRATIONS_DIR=./dist/database/migrations
+TYPEORM_ENTITIES=./dist/entities/*.ts
+TYPEORM_ENTITIES_DIR=./dist/entities
+
+
