--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 # Typeorm - DEV
-TYPEORM_MIGRATION=./src/shared/infra/typeorm/migrations/*.ts
-TYPEORM_ENTITIES=./src/modules/**/infra/typeorm/entities/*.ts
-TYPEORM_CLI=./src/shared/infra/typeorm/migrations
-
+TYPEORM_MIGRATION=./src/database/migrations/*.ts
+TYPEORM_MIGRATIONS_DIR=./src/database/migrations
+TYPEORM_ENTITIES=./src/entities/*.ts
+TYPEORM_ENTITIES_DIR=./src/entities
 
